# cpp-social-network-client-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: client.cpp
qt_client/: AddFriend.cpp  AddFriend.h  CreatePost.cpp  CreatePost.h  FriendRequests.cpp  FriendRequests.h  FriendType.cpp  FriendType.h  GuestPostsWindow.cpp  GuestPostsWindow.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  MessagesWindow.cpp  MessagesWindow.h  NetworkClient.cpp  NetworkClient.h  RegisterWindow.cpp  RegisterWindow.h  main.cpp
server/: Command.h  CommandFactory.cpp  CommandFactory.h  Database.cpp  Database.h  Logger.cpp  Logger.h  SessionManager.cpp  SessionManager.h  server.cpp
server/commands/: AcceptFriendCommand.cpp  AcceptFriendCommand.h  AddCommand.cpp  AddCommand.h  ChatCommand.cpp  ChatCommand.h  ChatsCommand.cpp  ChatsCommand.h  CreatePostCommand.cpp  CreatePostCommand.h  FriendRequestCommand.cpp  FriendRequestCommand.h  GroupCommand.cpp  GroupCommand.h  ListFriendRequestsCommand.cpp  ListFriendRequestsCommand.h  ListFriendsCommand.cpp  ListFriendsCommand.h  ListPostsCommand.cpp  ListPostsCommand.h  LoginCommand.cpp  LoginCommand.h  LogoutCommand.cpp  LogoutCommand.h  OpenCommand.cpp  OpenCommand.h  RegisterCommand.cpp  RegisterCommand.h  SendCommand.cpp  SendCommand.h  SetFriendTypeCommand.cpp  SetFriendTypeCommand.h  SetProfileVisibilityCommand.cpp  SetProfileVisibilityCommand.h  ShowCommand.cpp  ShowCommand.h
